# ansible-log-analysis

./: .env.example  .gitignore  Containerfile  Makefile  README.md  RHDP_GITOPS_PLAN.md  backend_init_pipeline.py  build-and-push.sh  init_pipeline.py  pyproject.toml  rag_init_pipeline.py
.github/workflows/: build-and-push.yml  test.yml
annotation_interface/: app.py
deploy/helm/: Makefile
deploy/helm/ansible-log-monitor/: global-values.yaml  values.yaml
deploy/helm/ansible-log-monitor/charts/aap-mock/: README.md  values.yaml
deploy/helm/ansible-log-monitor/charts/backend/: values.yaml
deploy/helm/ansible-log-monitor/charts/rag/: Chart.yaml  values.yaml
deploy/helm/ansible-log-monitor/charts/text-embeddings-inference/: values.yaml
deploy/local/: Makefile  compose.yaml
deploy/local/config/grafana/alerting/: contactpoints.yaml  policies.yaml  rules.yaml
deploy/local/config/loki/: local-config.yaml
deploy/local/config/promtail/: promtail-local-config.yaml
docs/: RAG_SERVICE_MIGRATION.md
examples/: test_loki_graph.py
services/aap-log-collector/: Containerfile  Makefile
services/aap-log-collector/app/: config.py  main.py
services/alloy/: Containerfile
services/annotation_interface/: .python-version  Containerfile  README.md  app.py  pyproject.toml  test_end_to_end.py
services/annotation_interface/data/feedback/: annotation.json
services/rag/: Containerfile  Containerfile.rag-init  README.md  index_loader.py  main.py  pyproject.rag-init.toml  pyproject.toml  rag_init_pipeline.py
services/rag/src/rag/: embed_and_index.py  ingest_and_chunk.py  query_api.py  query_pipeline.py
services/rag/src/utils/: config.py  logger.py  minio.py  rag_minio.py
services/rag/tests/: test_embeddings.py  test_queries.py
services/ui/: Containerfile  README.md  app.py  pyproject.toml
src/alm/: database.py  llm.py  main_fastapi.py  models.py
src/alm/agents/: graph.py  node.py
src/alm/agents/get_more_context_agent/: graph.py  rag_handler.py
src/alm/agents/loki_agent/: agent.py  constants.py  graph.py  nodes.py  state.py
src/alm/agents/loki_agent/prompts/: identify_missing_data.md  loki_agent_system_prompt.md  summarize_loki_logs.md
src/alm/ingestion/: filesystem.py  loki_database.py  transformations.py
src/alm/pipeline/: offline.py
src/alm/rag/: embed_and_index.py
src/alm/routes/: grafana_alert.py
src/alm/tools/: log_lines_context_helpers.py  loki_helpers.py  loki_tool_cache.py  loki_tools.py
src/alm/utils/: job_monitor.py  logger.py  minio.py  phoenix.py  rag_handler.py  rag_service.py
(+21 files in other folders)
