[project]
name = "alm"
version = "0.1.1"
description = "Ansible Log Monitoring"
readme = "README.md"
authors = [
    { name = "Itay Katav", email = "ikatav@redhat.com" }
]
requires-python = ">=3.12"

dependencies = [
    # Core web and AI framework
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.5",
    "uvicorn>=0.35.0",
    "httpx>=0.27.2",
    "gradio>=5.42.0",

    # Database and ORM
    "sqlmodel>=0.0.8",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",

    # ML / RAG
    "scikit-learn>=1.7.1",
    # Install torch CPU-only BEFORE sentence-transformers to avoid CUDA deps
    "torch==2.9.0+cpu",
    "torchvision==0.24.0+cpu",
    "sentence-transformers>=2.7.0",
    "faiss-cpu>=1.7.4",
    "pypdf>=5.0.0",

    # Object storage
    "minio>=7.2.17",

    # Observability / tracing
    "arize-phoenix-otel>=0.13.1",
    "openinference-instrumentation-langchain>=0.1.33",
    "python-dateutil>=2.8.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "html2text>=2025.4.15",
    "isort>=6.0.1",
    "jupyterlab>=4.4.5",
    "langgraph-cli[inmem]>=0.4.4",
    "pre-commit>=4.2.0",
    "prettier>=0.0.7",
    "pytest>=7.4.0",
    "rich>=14.1.0",
    "ruff>=0.12.8",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
extend-exclude = [
    "notebooks/",
    "evals/",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]