[project]
name = "ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Itay Katav", email = "ikatav@redhat.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.42.0",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "markdown>=3.6",
    "python-dotenv>=1.1.0",
]
